package example;

public class fish extends animal {


    public fish(int age, int weight, String name, String gender) {
        super(age, weight, name, gender);
    }

    public  void swim(){
        System.out.println("the fish is swimming");

    }
}
