package example;

public class bird extends animal{

    public bird(int age, int weight, String name, String gender) {
        super(age, weight, name, gender);
    }


    }

