@startuml
'https://plantuml.com/class-diagram

abstract class AbstractList
abstract AbstractCollection
interface List
interface Collection

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

skinparam classAttributeIconSize 0

class animal {
- age : int
- name : String
- gender : String
- weight : int
+  eat():
+ sleep():

}

class bird extends animal{

}

class fish extends animal {
+ swim():
}
class chicken extends bird{

}

interface flyable  {
+ fly()
}

class sparrow extends bird{
}

sparrow .. flyable







@enduml